<resources>
    <string name="app_name">AndroidDemo</string>
    <string name="mytextview">MyTextView</string>
    <string name="button_run_scheduler">Run Schedulers Example</string>
    <string name="ontouch_demo">onTouch Demo</string>
    <string name="rxjava_demo">RxJava Demo</string>
    <string name="rximageload_demo">RxImageLoad Demo</string>
    <string name="load_image">Load Image</string>
    <string name="test_map">map</string>
    <string name="test_lift">lift</string>
    <string name="rxjavatransform_demo">RxJavaTransform Demo</string>
    <string name="test_flatmap">flatMap</string>
    <string name="butter_knife_test">Butter Knife Test</string>
    <string name="please_input_something">Please input something...</string>
    <string name="click">Click</string>
    <string name="butter_knife">Butter Knife Demo</string>
    <string name="reset">Reset</string>
    <string name="test_flatmap1">flatMap1</string>
    <string name="rxjavaretrofi_demo">RxJavaRetrofi Demo</string>
    <string name="test_filter">filter</string>
    <string name="test_take">take</string>
    <string name="interval">interval</string>
    <string name="svg_demo">SVG Demo</string>
    <string name="number_picker_demo">Number Picker Demo</string>
    <string name="coupon_hours">Please Input promo hours：</string>
    <string name="binder_demo">Binder Demo</string>
    <string name="binder_test">Binder Test</string>
    <string name="bind">Bind</string>
    <string name="mvp_demo">MVP Demo</string>
    <string name="mvp">MVP</string>
    <string name="ndk_demo">NDK Demo</string>
    <string name="ndk_demo_txt">NDK Demo</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aidl_demo">AIDL Demo</string>
    <string name="date_picker">Date Picker</string>
</resources>
