<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/onTouchDemo"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:textColor="@drawable/selector_button_color"
                android:background="@drawable/selector_button_bg"
                android:textSize="@dimen/font_mormal"
                android:text="@string/ontouch_demo"/>

            <Button
                android:id="@+id/rxJavaDemo"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:textColor="@drawable/selector_button_color"
                android:background="@drawable/selector_button_bg"
                android:textSize="@dimen/font_mormal"
                android:text="@string/rxjava_demo"/>

            <Button
                android:id="@+id/rxImageLoadDemo"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:textColor="@drawable/selector_button_color"
                android:background="@drawable/selector_button_bg"
                android:textSize="@dimen/font_mormal"
                android:text="@string/rximageload_demo"/>

            <Button
                android:id="@+id/rxTransformDemo"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:textColor="@drawable/selector_button_color"
                android:background="@drawable/selector_button_bg"
                android:textSize="@dimen/font_mormal"
                android:text="@string/rxjavatransform_demo"/>

            <Button
                android:id="@+id/btn_butterknife"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAllCaps="false"
                android:textColor="@drawable/selector_button_color"
                android:background="@drawable/selector_button_bg"
                android:textSize="@dimen/font_mormal"
                android:text="@string/butter_knife"/>

            <Button
                android:id="@+id/btn_svg"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:textColor="@drawable/selector_button_color"
                android:background="@drawable/selector_button_bg"
                android:textSize="@dimen/font_mormal"
                android:text="@string/svg_demo"/>

            <Button
                android:id="@+id/btn_number_picker"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:textColor="@drawable/selector_button_color"
                android:background="@drawable/selector_button_bg"
                android:textSize="@dimen/font_mormal"
                android:text="@string/number_picker_demo"/>

            <Button
                android:id="@+id/btn_binder"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:textColor="@drawable/selector_button_color"
                android:background="@drawable/selector_button_bg"
                android:textSize="@dimen/font_mormal"
                android:text="@string/binder_demo"/>

            <Button
                android:id="@+id/btn_mvp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAllCaps="false"
                android:textColor="@drawable/selector_button_color"
                android:background="@drawable/selector_button_bg"
                android:textSize="@dimen/font_mormal"
                android:text="@string/mvp_demo"/>

            <Button
                android:id="@+id/btn_ndk"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:textColor="@drawable/selector_button_color"
                android:background="@drawable/selector_button_bg"
                android:textSize="@dimen/font_mormal"
                android:text="@string/ndk_demo"/>

            <Button
                android:id="@+id/btn_aidl"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:textColor="@drawable/selector_button_color"
                android:background="@drawable/selector_button_bg"
                android:textSize="@dimen/font_mormal"
                android:text="@string/aidl_demo"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
