<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chenlei1_iri.androiddemo.RxJavaTransformActivity">

    <Button
        android:id="@+id/btn_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/test_map"/>

    <Button
        android:id="@+id/btn_flatmap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_map"
        android:textAllCaps="false"
        android:layout_marginTop="5dp"
        android:text="@string/test_flatmap"/>

    <Button
        android:id="@+id/btn_flatmap1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_flatmap"
        android:textAllCaps="false"
        android:layout_marginTop="5dp"
        android:text="@string/test_flatmap1"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btn_flatmap1"
        android:layout_marginTop="5dp">
        <TextView
            android:id="@+id/tv_rx_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </ScrollView>

</RelativeLayout>
